[package]
name = "bluefan-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
dashmap = "5.4.0"
rocksdb = "0.21.0"
fasthash = "0.4.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel", "crossbeam-queue"] }
bincode = "1.3.3"
getset = "0.1.2"
bytes = { version = "1.4.0", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"

[[bench]]
name = "benches_queue"
harness = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
